--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,7 @@
 <div class="col-sm-10">
   <h1> Forecast for {{forecastCtrl.city}} </h1>
   <ul ng-repeat="day in forecastCtrl.forecast">
-    <li> {{ day.date }} </li>
+    <li> {{ day.weekday }} </li>
     <li> Temperature: {{ day.temp }} </li>
     <li> High: {{ day.high }} </li>
     <li> Low: {{ day.low }} </li>
