--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,9 +1,32 @@
-<div class="col-sm-10">
-  <h1> Forecast for {{forecastCtrl.city}} </h1>
-  <ul ng-repeat="day in forecastCtrl.forecast">
-    <li> {{ day.weekday }} </li>
-    <li> Temperature: {{ day.temp }} </li>
-    <li> High: {{ day.high }} </li>
-    <li> Low: {{ day.low }} </li>
-  </ul>
+<div class="row">
+  <div class="col-sm-10 col-sm-offset-1">
+  <form ng-submit="forecastCtrl.updateZip()">
+        <div class="input-group">
+          <span class="input-group-btn">
+            <button type="button" class="btn btn-default btn-lg"
+                    ng-click="forecastCtrl.updateForecast()">
+              <span class="glyphicon glyphicon-map-marker" aria-hidden="true">
+              </span>
+            </button>
+          </span>
+          <input class="form-control input-lg"
+                  ng-model="forecastCtrl.zip"
+                  placeholder="Enter a zip code">
+          </input>
+          <span class="input-group-btn">
+            <button type="submit" class="btn btn-primary btn-lg">Search</button>
+          </span>
+        </div>
+        <span ng-if="searchCtrl.warning">
+          Please select a city
+        </span>
+      </form>
+    <h1> Forecast for {{forecastCtrl.city}} </h1>
+    <ul ng-repeat="day in forecastCtrl.forecast">
+      <li> {{ day.weekday }} </li>
+      <li> Temperature: {{ day.temp }} </li>
+      <li> High: {{ day.high }} </li>
+      <li> Low: {{ day.low }} </li>
+    </ul>
+  </div>
 </div>
