--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,5 +1,8 @@
 // bower:scss
 // endbower
+@import 'partials/base';
+@import 'partials/form';
+@import 'partials/forecast';
 
 .browsehappy {
   margin: 0.2em 0;
@@ -10,35 +13,6 @@
 
 body {
   padding: 0;
+  background-color: #f0f0f0;
 }
 
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
-}
-
-.ng-submitted .ng-invalid {
-  border: 1px solid #a94442;
-}
-
-.alert {
-  margin-top: 10px;
-}
