Add error message for bad zips

--- a/app/views/form.html
+++ b/app/views/form.html
@@ -7,7 +7,7 @@
             aria-hidden="true">
       </span>
       <span class="sr-only">Error:</span>
-      Geolocation is not enabled
+      {{ forecastCtrl.warning }}
   </div>
 
 <form name="zipForm"
